--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,8 +53,8 @@ services:
     depends_on:
       - wordpress
     ports:
-      - "8080:80"    # http
-      - "8443:443"   # https
+      - "80:80"    # http   front is  out port  : docker inside port
+      - "443:443"   # https
     volumes:
       - ${WORDPRESS_LOCAL_HOME}:/var/www/html
       - ${NGINX_CONF}:/etc/nginx/conf.d/default.conf
